test/golden/{1 + - SL lalalal}.14923086665437293731.golden

INITIALPATH:7:29: error:
    • parse error on input `/' in haskell expression
    • In the quasi-quotation: [fmt|{1 + - / lalalal}|]
  |
7 | main = putStrLn [fmt|{1 + - / lalalal}|]
  |                             ^
